# site

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  Makefile  Pandoc_convert_md_to_rst.py  README.md  conf.py  genindex.html  index.html  make.bat  objects.inv  postBuild  push.sh  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sh.exe.stackdump  sphinx.configuration
2017/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2017/.doctrees/: environment.pickle  index.doctree
2017/_sources/: index.rst.txt
2017/_static/: documentation_options.js
2017/course-info/: course-info.html  grading.html  installing-anacondas.html  learning-goals.html  licensing.html  python-vocabulary.html  (+1 more)
2018/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
2019/: .buildinfo  genindex.html  index.html  objects.inv  search.html
_sources/: index.rst.txt
ai/: Bill-the-vending-machine.ai  Geo-Python-video-intro-screen.ai
book-dev/: .buildinfo  genindex.html  index.html  search.html
course-info/: course-info.html  grading.html  installing-anacondas.html  learning-goals.html  licensing.html  python-vocabulary.html  resources.html
develop/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
key/: Pandas-data-structure-images.key  driver-navigator.key
l1-dev/: .buildinfo  genindex.html  index.html  search.html
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
source/: conf.py  course-info.rst  index.rst  rtd_requirements.txt
(+1151 files in other folders)
